add product update and delete endpoints
